# xbmc-addon-fortherecord

./: .gitignore  ChangeLog  Makefile.am  Makefile.include  README.md  configure.in
src/: Makefile  Makefile.am  Makefile.in  Makefile.original  client.cpp  client.h  fortherecordrpc.cpp  fortherecordrpc.h  pvrclient-fortherecord.cpp  pvrclient-fortherecord.h
src/lib/filesystem/: FileSMB.cpp  FileSMB.h
src/lib/tsreader/: FileReader.cpp  FileReader.h  MultiFileReader.cpp  TSReader.cpp
src/posix/: os_posix.h
xbmc/: xbmc_pvr_dll.h  xbmc_pvr_types.h
xbmc/platform/util/: StdString.h
